# RootScript

./: .gitmodules  BackgroundSimpleAnalyse.cpp  BackgroundTriggerAnalyse.cpp  CMakeLists.txt  data.txt  main.cpp  process_mc_ntuple_on_bluster.C  smear_mc_on_bluster.C
Bamboo2REST/: CMakeLists.txt  G4DataConvert.cpp  G4DataConvert.h  main.cpp
BambooKeras/: 3DReconstruct.cpp  AddUUID.cpp  CMakeLists.txt  DrawWave.cpp  KerasDrift.cpp  KerasPicture.cpp  KerasReconstruct.cpp  MergePicture.cpp  Readme.md  ReadoutWave.cpp  ReadoutWave.hh  Simple3DReconstruct.cpp  base_convert.h  main.json
ConvolutionFit/: CMakeLists.txt  LinkDef.h  OriginMethod.cpp  OriginMethod.h  RooMyPdf.cxx  RooMyPdf.h  cuda_calculate.cu  cuda_calculate.h
CountingStationAnalyse/: CMakeLists.txt  MergeMC.cc  SmearMC.cc  SmearMC.hh
CountingStationAnalyse/MC/: MergeMC.cc  MergeMC.hh
GasCalculate/: CMakeLists.txt  FTM.C  fit.cpp  main.cpp
LatexAnalyse/: CMakeLists.txt
LatexAnalyse/include/: Raw2Info.hh
LatexAnalyse/src/: Raw2Info.cc
LengthDistribution/: CMakeLists.txt  LengthDistribution.cpp  LengthDistribution.h
MLData/: CMakeLists.txt  hit2data.cpp  hit2data.h
MulitFuncFit/: CMakeLists.txt  Fit.cpp  Fit.h  Function.cpp  Function.h
PrototypeCut/: CMakeLists.txt  am_fit.cpp  cd_fit.cpp  drift.cpp  fit.cpp  smear.cpp  total_energy.cpp
PrototypeElectron/: CMakeLists.txt  PrototypeConvert.cpp  base_convert.h  jsoncpp.cpp  parameter.json
RootExam/: CMakeLists.txt  create_data.cpp  read_data.cpp
TimeSplit/: CMakeLists.txt  split.cc
cmake/: FindGarfield.cmake  MacroRootDict.cmake
