INCLUDE_DIRECTORIES(Readout_Struct/include)
INCLUDE_DIRECTORIES(.)
set(ROOT_DICT_INPUT_HEADERS ReadoutWave.hh)
GEN_ROOT_DICT_SOURCE(ReadoutWave.cpp)
add_subdirectory(Readout_Struct)
add_library(ReadoutWave SHARED ${ROOT_DICT_OUTPUT_SOURCES})
add_executable(KerasDrift ReadoutWave.cpp KerasDrift.cpp)
target_link_libraries(KerasDrift readout ReadoutWave)